chore: update gitignore for Python and test files
- Add Python cache files (__pycache__, *.pyc, etc.)
- Add SQLite database files (*.db)
- Add test file exclusion
- Remove tracked cache files from repository

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,21 @@ __screenshots__/
 # Claude Code
 .claude/
 CLAUDE.md
+
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+.Python
+*.so
+*.egg
+*.egg-info/
+.venv/
+venv/
+
+# SQLite
+*.db
+
+# Test files
+src/assets/markdown-test.md
